// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormLabel > should render & hover if optional 1`] = `
<DocumentFragment>
  <label
    class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
    data-testid="FormLabel"
  >
    Test
    <span>
      <span
        aria-describedby="«r0»"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-500 ml-1"
          data-testid="FormLabel__optional"
        >
          optional
        </span>
      </span>
    </span>
  </label>
</DocumentFragment>
`;

exports[`FormLabel > should render with name from context 1`] = `
<DocumentFragment>
  <label
    class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
    data-testid="FormLabel"
    for="test"
  >
    Test Label
  </label>
</DocumentFragment>
`;
